[package]
name = "rp-sdio"
version = "0.1.0"
edition = "2024"
authors = ["Charles Thompson"]
license = "MIT"
readme = "README.md"
keywords = ["sdio", "filesystem", "no_std", "embedded", "rp2040"]
catagories = ["filesystem", "embedded", "no_std", "hardware-support"]
description = "simple crate to interface between a disk and it's partitions"
repository = "https://github.com/Gip-Gip/rp-sdio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-io = "0.4.0"
rp2040-pac = "0.4.0"
rp2040-hal= "0.11.0"
rp2040-boot2= "0.3.0"
rp2040-hal-macros = "0.1.0"
critical-section = "1.0.0"
fugit = "0.3.6"
pio-proc = "0.2.0"
pio = "0.2.0"
snafu = { version = "0.7.4", default-features = false }
bytemuck = {version = "1.13.1", default-features = false, features = ["min_const_generics"] }

[features]
rt = ["rp2040-pac/rt"]
rom-func-cache = []
disable-intrinsics = []
rom-v2-intrinsics = []
rp2040-e5 = []
critical-section-impl = ["critical-section/restore-state-u8"]
